--- a/Resources/Private/Language/locallang.xml
+++ b/Resources/Private/Language/locallang.xml
@@ -47,7 +47,8 @@
 			<label index="records">Records</label>
 			<label index="discussions">Discussions</label>
 			<label index="discussion.start">Start new discussion</label>
-			<label index="thread.start">Start new subject</label>
+			<label index="thread.start">Start new subject here</label>
+			<label index="thread.view">View %s subjects</label>
 			<label index="reply.start">Reply to</label>
 
 			<label index="email.authorization.subject">Please authorize your email addres</label>
@@ -127,7 +128,8 @@ Forget this authorization (and let me re-authorize if needed):
 			<label index="records">Database-data</label>
 			<label index="discussions">Diskussioner</label>
 			<label index="discussion.start">Start ny diskussion</label>
-			<label index="thread.start">Start nyt emne</label>
+			<label index="thread.start">Start nyt emne her</label>
+			<label index="thread.view">Vis %s emner</label>
 			<label index="reply.start">Besvar</label>
 
 			<label index="email.salutation">Dear %s,</label>
@@ -207,6 +209,7 @@ Forget this authorization (and let me re-authorize if needed):
 			<label index="discussions">Diskussioner</label>
 			<label index="discussion.start">Start ny diskussion</label>
 			<label index="thread.start">Start nyt emne</label>
+			<label index="thread.view">Vis %s emner</label>
 			<label index="reply.start">Besvar</label>
 
 			<label index="email.salutation">Dear %s,</label>
