--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -10,12 +10,15 @@
 			<label index="tx_dialog_domain_model_discussion.title">Title</label>
 			<label index="tx_dialog_domain_model_discussion.mode">Mode</label>
 			<label index="tx_dialog_domain_model_discussion.last_activity">Last Activity</label>
+			<label index="tx_dialog_domain_model_discussion.last_post">Last Post</label>
 			<label index="tx_dialog_domain_model_discussion.hash">Hash</label>
 			<label index="tx_dialog_domain_model_discussion.threads">Threads</label>
 			<label index="tx_dialog_domain_model_discussion.posts">Posts</label>
 			<label index="tx_dialog_domain_model_thread">Thread</label>
 			<label index="tx_dialog_domain_model_thread.hash">Hash</label>
 			<label index="tx_dialog_domain_model_thread.posts">Posts</label>
+			<label index="tx_dialog_domain_model_thread.last_activity">Last activity</label>
+			<label index="tx_dialog_domain_model_thread.last_post">Last Post</label>
 			<label index="tx_dialog_domain_model_post">Post</label>
 			<label index="tx_dialog_domain_model_post.subject">Subject</label>
 			<label index="tx_dialog_domain_model_post.content">Content</label>
