[FEATURE] File attachments for Posts

--- a/Resources/Private/Language/locallang.xml
+++ b/Resources/Private/Language/locallang.xml
@@ -43,6 +43,9 @@
 
 			<label index="buttonSend">I'm done - send</label>
 			<label index="buttonCancel">I changed my mind</label>
+			<label index="attachments">Attachments</label>
+			<label index="chooseFile">Choose file</label>
+			<label index="changeFile">Change file</label>
 
 			<label index="records">Records</label>
 			<label index="discussions">Discussions</label>
@@ -124,6 +127,9 @@ Forget this authorization (and let me re-authorize if needed):
 
 			<label index="buttonSend">Send svar</label>
 			<label index="buttonCancel">Annullér</label>
+			<label index="attachments">Vedhæftede filer</label>
+			<label index="chooseFile">Vælg fil</label>
+			<label index="changeFile">Skift fil</label>
 
 			<label index="records">Database-data</label>
 			<label index="discussions">Diskussioner</label>
@@ -204,6 +210,9 @@ Forget this authorization (and let me re-authorize if needed):
 
 			<label index="buttonSend">Send svar</label>
 			<label index="buttonCancel">Annullér</label>
+			<label index="attachments">Vedhæftede filer</label>
+			<label index="chooseFile">Vælg fil</label>
+			<label index="changeFile">Skift fil</label>
 
 			<label index="records">Database-data</label>
 			<label index="discussions">Diskussioner</label>
