--- a/Resources/Private/Language/locallang.xml
+++ b/Resources/Private/Language/locallang.xml
@@ -47,6 +47,9 @@
 			<label index="images">Images</label>
 			<label index="chooseFile">Choose file</label>
 			<label index="changeFile">Change file</label>
+			<label index="editPost">Edit post</label>
+			<label index="noAccessHeader">You don't have access to this location</label>
+			<label index="noAccessBody">If you believe this is an error please contact the system administrator.</label>
 
 			<label index="records">Records</label>
 			<label index="discussions">Discussions</label>
@@ -133,6 +136,9 @@ Forget this authorization (and let me re-authorize if needed):
 			<label index="images">Vedhæftede billeder</label>
 			<label index="chooseFile">Vælg fil</label>
 			<label index="changeFile">Skift fil</label>
+			<label index="editPost">Redigér emne</label>
+			<label index="noAccessHeader">Du har ikke adgang til dette sted</label>
+			<label index="noAccessBody">Hvis du mener dette er en fejl bør du kontakte systemadministratoren.</label>
 
 			<label index="records">Database-data</label>
 			<label index="discussions">Diskussioner</label>
@@ -218,6 +224,9 @@ Forget this authorization (and let me re-authorize if needed):
 			<label index="images">Vedhæftede billeder</label>
 			<label index="chooseFile">Vælg fil</label>
 			<label index="changeFile">Skift fil</label>
+			<label index="editPost">Redigér emne</label>
+			<label index="noAccessHeader">Du har ikke adgang til dette sted</label>
+			<label index="noAccessBody">Hvis du mener dette er en fejl bør du kontakte systemadministratoren.</label>
 
 			<label index="records">Database-data</label>
 			<label index="discussions">Diskussioner</label>
