Complete and fix German translations

--- a/Resources/Private/Language/locallang.xml
+++ b/Resources/Private/Language/locallang.xml
@@ -286,83 +286,100 @@ Forget this authorization (and let me re-authorize if needed):
 			<label index="tx_dialog_domain_model_poster.email">Email</label>
 		</languageKey>
 		<languageKey index="de" type="array">
+			<label index="title">Dialog</label>
+			<label index="forget">Abmelden</label>
+			<label index="forgetAndRemove">Profil zurücksetzen</label>
+			<label index="forgetAndRemoveTitle">Fehlerhaftes Profil zurücksetzen und automatisch abmelden.</label>
+			<label index="by">von</label>
+			<label index="home">Startseite</label>
+			<label index="noDescription">Diese Diskussion hat keine Beschreibung.</label>
+			<label index="discussions">Diskussionen</label>
+			<label index="noDiscussions">Keine Diskussionen vorhanden.</label>
+			<label index="noThreads">Keine Themen vorhanden.</label>
+			<label index="replyTo">Antworten</label>
+			<label index="reportInappropriate">Unangemessenen Inhalt melden</label>
+			<label index="writeReply">Ihre Antwort:</label>
+			<label index="personalInfo">Persönliche Angaben</label>
+			<label index="emailFieldMessage">Ihre E-Mail-Adresse wird gespeichert, aber nicht angezeigt.</label>
+			<label index="webFieldMessage">Beginnen Sie die URL ohne http://.</label>
+			<label index="allowedHtml">Erlaubter HTML-Code:</label>
+            <label index="allowedMarkdown">Formatierung möglich</label>
+         	<label index="allowedMarkdownExample">__fett__, _kursiv_, [Link-Text](http://link.url/ "optionaler Link-Titel"), `Quellcode`,
+         				## Überschrift, > Zitat. Syntax-Highlighting durch Einrückung um mindestens zwei Leerschläge. Um einen Zeilenabstand zu erzeugen, am Ende einer Zeile mindestens zwei Leerschläge anhängen.</label>
+			<label index="latestPosts">Neueste Beiträge</label>
 
-			<label index="title"> Dialog </label>
-			<label index="forget"> Abmelden </label>
-			<label index="forgetAndRemove"> Reset-Identität </label>
-			<label index="forgetAndRemoveTitle"> Profil Daten und Du automatisch abmelden </label>
-			<label index="by"> von </label>
-			<label index="home">Startseite </label>
-			<label index="noDescription"> für diese Diskussion gibt es keine Beschreibung. </label>
-			<label index="discussions"> Posts </label>
-			<label index="noDiscussions"> keine Posts</label>
-			<label index="noThreads"> noch keine Themen </label>
-			<label index="replyTo"> Antwort </label>
-			<label index="reportInappropriate"> Melde unangemessenen Inhalt </label>
-			<label index="writeReply"> Schreiben Sie Ihre Antwort: </label>
-			<label index="personalInfo"> persönliche Info </label>
-			<label index="emailFieldMessage"> Ihre E-Mail aufgenommen wird aber nicht angezeigt. </label>
-			<label index="webFieldMessage"> bitte nicht http:// in der URL. </label>
-			<label index="allowedHtml"> erlaubter HTML Code: </label>
-			<label index="latestPosts"> neueste Meldungen </label>
+			<label index="reportTitle">Beitrag melden</label>
+			<label index="reportHover">Ihre Meldung wird anonym behandelt. Sollten Sie illegale Aktivitäten vermuten, wenden Sie sich bitte direkt an uns.</label>
+			<label index="reportHeader">Möchten Sie diesen Beitrag melden?</label>
+			<label index="reportReceived">Bericht erhalten</label>
+			<label index="reportReceived">Wir haben Ihre Meldung erhalten - vielen Dank!</label>
+			<label index="reportReturn">Zurück zur Diskussion</label>
+			<label index="reportLegend">Bericht vor dem Senden überprüfen</label>
+			<label index="reportWhatWillHappen">Was wird geschehen?</label>
+			<label index="reportWhatWillHappenElaboration">Eine E-Mail wird an den Beitreiber gesendet, welche die notwendigen Schritte unternehmen wird.</label>
+			<label index="reportSendButton">Bericht senden</label>
+			<label index="or">oder</label>
 
-			<label index="reportTitle"> Beitrag melden </label>
-			<label index="reportHover"> Keine Sorge - Sie bleiben anonym. Allerdings, wenn Sie  illegale Aktivitäten vermuten wenden Sie sich bitte direkt an uns. </label>
-			<label index="reportHeader"> Möchten Sie diesen Beitrag melden? </label>
-			<label index="reportReceived"> Bericht erhielt </label>
-			<label index="reportReceived"> Wir haben Ihre Meldung erhalten - vielen Dank! </label>
-			<label index="reportReturn"> zurück zum Post </label>
-			<label index="reportLegend"> Bericht bestätigen  vor dem Senden </label>
-			<label index="reportWhatWillHappen"> Was wird geschehen? </label>
-			<label index="reportWhatWillHappenElaboration"> Eine E-Mail wird an den Site-Administrator gesendet.</label>
-			<label index="reportSendButton"> sende Bericht </label>
-			<label index="or"> oder </label>
+			<label index="buttonSend">senden</label>
+			<label index="buttonCancel">abbrechen</label>
+   			<label index="attachments">Anlagen</label>
+            <label index="images">Bilder</label>
+            <label index="chooseFile">Datei auswählen</label>
+            <label index="changeFile">Auswahl ändern</label>
+            <label index="editPost">Beitrag bearbeiten</label>
+            <label index="noAccessHeader">Zugriff verweigert</label>
+            <label index="noAccessBody">Falls Sie einen Fehler vermuten, kontaktieren Sie bitte den Website-Betreiber.</label>
+            <label index="gravatarChange">Ändern Sie Ihren Gravatar auf gravatar.com</label>
+			<label index="records">Einträge</label>
+			<label index="discussions">Diskussionen</label>
+			<label index="discussion.start">Neue Diskussion starten</label>
+			<label index="thread.start">Neues Thema starten</label>
+            <label index="thread.view">%s Themen anzeigen</label>
+			<label index="reply.start">Antworten</label>
+			<label index="email.authorization.subject">Bitte bestätigen Sie Ihre E-Mail-Adresse</label>
+			<label index="email.salutation">Sehr geehrte/r %s, </label>
+			<label index="email.signature">Mit freundlichen Grüßen,
+                %s</label>
+			<label index="email.authorization.explanation">Sie erhalten diese E-Mail, weil die folgende E-Mail-Adresse noch nicht freigeschaltet wurde:
 
-			<label index="buttonSend"> senden </label>
-			<label index="buttonCancel"> abbrechen </label>
+                %s
 
-			<label index="records"> Aufzeichnungen </label>
-			<label index="discussions"> Posts </label>
-			<label index="discussion.start"> Start einen neuen Post </label>
-			<label index="thread.start"> neuen  Thread starten </label>
-			<label index="reply.start"> Antwort </label>
+                Falls Sie die Person sind, die den entsprechenden Beitrag verfasst hat,
+                klicken Sie bitte auf einen der untenstehenden Links, um Ihre E-Mail-Adresse
+                zu bestätigen.
 
-			<label index="email.authorization.subject"> Bitte autorisieren Ihre E-Mail Adressse </label>
-			<label index="email.salutation"> Sehr geehrter% s, </label>
-			<label index="email.signature"> Mit freundlichen Grüßen,
-				% S </label>
-			<label index="email.authorization.explanation"> Bitte autohrisieren Sie den Post:
+                Um weitere Beiträge ohne Bestätigung verfassen zu können, können Sie Ihre
+                Freischaltung in einem Cookie speichern lassen. (Die Freischaltung können Sie mit
+                dem untersten Link widerrufen.) Falls Sie nicht an einem privaten Computer arbeiten,
+                sollten Sie "Freigabe in Browser-Sitzung speichern" anklicken.
 
-				% S
+				Freigabe (dauerhaft) in Cookie speichern:
+				%s
 
-				Shop Genehmigung in Cookie (permanent):
-				% S
+                Freigabe (vorübergehend) in Session speichern:
+				%s
 
-				Shop Genehmigung in Session (temporär):
-				% S
+				Beitrag freigeben und Freigabe nicht speichern:
+				%s</label>
+			<label index="tx_dialog_domain_model_discussion">Diskussion</label>
+			<label index="tx_dialog_domain_model_discussion.title">Titel</label>
+			<label index="tx_dialog_domain_model_discussion.mode">Modus</label>
+			<label index="tx_dialog_domain_model_discussion.last_activity">Letzte Aktivität</label>
+			<label index="tx_dialog_domain_model_discussion.hash">Hash-Kennung</label>
+			<label index="tx_dialog_domain_model_discussion.threads">Themen</label>
+			<label index="tx_dialog_domain_model_discussion.posts">Beiträge</label>
+			<label index="tx_dialog_domain_model_thread">Thema</label>
+			<label index="tx_dialog_domain_model_thread.hash">Hash-Kennung</label>
+			<label index="tx_dialog_domain_model_thread.posts">Beiträge</label>
+			<label index="tx_dialog_domain_model_post">Wörter</label>
+			<label index="tx_dialog_domain_model_post.content">Ihr Beitrag</label>
+			<label index="tx_dialog_domain_model_post.hash">Hash-Kennung</label>
+			<label index="tx_dialog_domain_model_post.replies">Antworten</label>
+			<label index="tx_dialog_domain_model_post.subject">Betreff</label>
 
-				Keine Genehmigung:
-				% S </label>
-
-			<label index="tx_dialog_domain_model_discussion"> Post </label>
-			<label index="tx_dialog_domain_model_discussion.title"> Titel </label>
-			<label index="tx_dialog_domain_model_discussion.mode"> Modus </label>
-			<label index="tx_dialog_domain_model_discussion.last_activity"> Letzte Aktivität </label>
-			<label index="tx_dialog_domain_model_discussion.hash"> Hash-Kennung </label>
-			<label index="tx_dialog_domain_model_discussion.threads"> Themen </label>
-			<label index="tx_dialog_domain_model_discussion.posts"> Beiträge </label>
-			<label index="tx_dialog_domain_model_thread"> Thema </label>
-			<label index="tx_dialog_domain_model_thread.hash"> Hash-Kennung </label>
-			<label index="tx_dialog_domain_model_thread.posts"> Beiträge </label>
-			<label index="tx_dialog_domain_model_post"> Wörter </label>
-			<label index="tx_dialog_domain_model_post.content"> Meldetext </label>
-			<label index="tx_dialog_domain_model_post.hash"> Hash-Kennung </label>
-			<label index="tx_dialog_domain_model_post.replies"> Antworten </label>
-			<label index="tx_dialog_domain_model_post.subject"> Betreff </label>
-
-			<label index="tx_dialog_domain_model_poster"> Poster </label>
-			<label index="tx_dialog_domain_model_poster.name"> Vorname </label>
-			<label index="tx_dialog_domain_model_poster.email"> E-Mail </label>
+			<label index="tx_dialog_domain_model_poster">VerfasserIn</label>
+			<label index="tx_dialog_domain_model_poster.name">Name</label>
+			<label index="tx_dialog_domain_model_poster.email">E-Mail</label>
 		</languageKey>
 	</data>
 </T3locallang>
